# stock-analysis

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  compose.yaml  pyproject.toml
.github/workflows/: check.yml
configs/: alembic.ini
configs/api/: README.md  README.zh-CN.md
configs/api/cninfo/: get_balance_sheets.yaml  get_cash_flow_statement.yaml  get_company_executives.yaml  get_company_his_dividend.yaml  get_company_introduction.yaml  get_equity_pledge.yaml  get_executives_inc_dec_detail.yaml  get_fund_holdings.yaml  get_income_statement.yaml  get_ints_detail.yaml  get_lift_ban.yaml  get_main_indicators.yaml  get_margin_trading.yaml  get_stock_structure.yaml  get_stockholder_num.yaml  get_stockholeder_inc_dec_detail.yaml  get_top_ten_circulating_stockholders.yaml  get_top_ten_stockholders.yaml
configs/api/yahoo/: history.yaml
configs/docker/: api.Dockerfile  migrate.Dockerfile  postgres.Dockerfile
configs/k8s/base/: kustomization.yaml  namespace.yaml
configs/prompts/: README.md  README.zh-CN.md  chat.md  chat.zh-CN.md  page.md  page.zh-CN.md  user.md  user.zh-CN.md
configs/rules/: .gitignore  README.md  README.zh-CN.md  scoring_rules_sample.yaml
data/: stocks.csv
data/api/: README.md  README.zh-CN.md
data/api/cninfo/: balance_sheets.json  company_introduction.json  executives_inc_dec_detail.json  getCashFlowStatement.json  getCompanyExecutives.json  getCompanyHisDividend.json  getEquityPledge.json  getFundHoldings.json  getIncomeStatement.json  getIntsDetail.json  getStockStructure.json  getTopTenCirculatingStockholders.json  getTopTenStockholders.json  lift_ban.json  main_indicators.json  margin_trading.json  stockholder_num.json  stockholeder_inc_dec_detail.json
data/api/yahoo/: history.json
data/reports/: README.md  README.zh-CN.md  reports.csv
docker/: api.Dockerfile  mcp.Dockerfile  migrate.Dockerfile  nginx.conf  web.Dockerfile  worker.Dockerfile
scripts/: analyze_data.py  build.sh  check.sh  check_pgq.sh  create_db.py  drop_db.py  dump.sh  dump_db.sh  import_csv.py  import_reports.py  init.sh  init_db.sh  migrate.sh  run.sh  run_mcp.sh  run_minio.sh  run_pgq.sh  run_ui.sh  update_data.py
src/stock_analysis/: __init__.py  logger.py  main.py  settings.py
src/stock_analysis/adapters/: __init__.py  cninfo.py  rule.py  yahoo.py
src/stock_analysis/adaptors/: __init__.py  cninfo.py  rule.py  stock.py  yahoo.py
src/stock_analysis/agent/: __init__.py  client.py  graph.py  ingest.py  model.py  retriever.py  server.py
src/stock_analysis/alembic/: env.py
src/stock_analysis/jobs/: __init__.py  analyzer.py  crawler.py  pgqueuer.py
src/stock_analysis/models/: __init__.py  analysis.py  api.py  base.py  chat.py  cninfo.py  report.py  stock.py  yahoo.py
src/stock_analysis/routers/: __init__.py  analysis.py  app.py  chat.py  report.py  stock.py
src/stock_analysis/schemas/: __init__.py  analysis.py  api.py  base.py  chat.py  report.py  rule.py  stock.py
src/stock_analysis/services/: __init__.py  agent.py  analyzer.py  bucket.py  cache.py  chat.py  database.py  downloader.py  mcp.py  parser.py  pgqueuer.py  report.py  stock.py
tests/stock_analysis/: conftest.py  test_settings.py
tests/stock_analysis/adapters/: test_cninfo_adapter.py  test_rule_adapter.py
tests/stock_analysis/adaptors/: test_cninfo_adaptor.py  test_rule_adaptor.py
tests/stock_analysis/agent/: test_graph.py  test_ingest.py  test_model.py  test_server.py
ui/: .gitignore  README.md  README.zh-CN.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
ui/src/: app.css
ui/src/lib/: api.ts  (+3 more)
(+64 files in other folders)
