[project]
name = "stock-analysis"
version = "0.1.0"
description = "A-share fundamental scoring agent with LLM-powered analysis for education purposes."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Feiyang Chen", email = "chris.chenfeiyang@gmail.com" },
]
maintainers = [
    { name = "Feiyang Chen", email = "chris.chenfeiyang@gmail.com" },
]
keywords = [
    "stock-analysis",
    "a-share",
    "fundamental-analysis",
    "fastapi",
    "sqlalchemy",
    "postgresql",
    "finance",
    "trading",
    "llm",
    "ai",
    "langchain",
    "retail-investors",
    "investment-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "aiolimiter>=1.2.1",
    "alembic>=1.17.2",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.124.4",
    "fastmcp>=2.14.4",
    "langchain>=1.1.3",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
    "langchain-postgres>=0.0.16",
    "langgraph>=1.0.5",
    "minio>=7.2.20",
    "numpy>=2.3.5",
    "pandas[performance]>=3.0.0",
    "pgqueuer>=0.25.3",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "sqlalchemy[asyncio]>=2.0.45",
    "tenacity>=9.1.2",
    "testcontainers>=4.13.3",
    "uvicorn[standard]>=0.38.0",
    "yfinance>=1.0",
]

[project.urls]
source = "https://github.com/FreeFlyingSheep/stock-analysis"
changelog = "https://github.com/FreeFlyingSheep/stock-analysis/blob/main/CHANGELOG.md"

[project.scripts]
app = "stock_analysis.main:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "langchain-qwq[typing]>=0.3.4",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.251219",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.9",
    "testcontainers[minio,postgres]>=4.13.3",
    "types-python-dateutil>=2.9.0.20251115",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.alembic]
script_location = "src/stock_analysis/alembic"
file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
prepend_sys_path = ["."]

[[tool.alembic.post_write_hooks]]
name = "ruff"
type = "exec"
executable = "%(here)s/.venv/bin/ruff"
options = "ruff format REVISION_SCRIPT_FILENAME"

[[tool.alembic.post_write_hooks]]
name = "ruff"
type = "exec"
executable = "%(here)s/.venv/bin/ruff"
options = "check --fix --unsafe-fixes REVISION_SCRIPT_FILENAME"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812"]
fixable = ["ALL"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "stock_analysis.schemas.base.BaseSchema",
    "sqlalchemy.orm.DeclarativeBase",
    "stock_analysis.models.base.Base",
]
runtime-evaluated-decorators = [
    "pydantic.validate_call",
    "attrs.define",
]
strict = true

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["INP001"]
"src/stock_analysis/alembic/versions/*" = ["INP001"]
"tests/*" = ["D100", "D103", "INP001", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.build-backend]
source-include = ["configs/api/**", "configs/rules/**", "configs/alembic.ini"]
